      a sample had been damaged for some reason
    - Fix: samples' CRC checksums were damaged on file structure changes.
    - Fix: samples' CRC checksums were misordered when a Sample was deleted.
    - Added new method Sample::GetWaveDataCRC32Checksum().
    - Changed default value of EG2Release (filter release time) to 60s.
    - Instruments' default pitch bend range is now +-2 semi tones.

  * src/DLS.cpp, src/DLS.h:
    - Sample: wave pool offsets are now 64 bits (to allow support for files
      larger than 4 GB).
      
  * src/RIFF.cpp, src/RIFF.h:
    - added support for RIFF files larger than 4 GB, by default the required
      internal RIFF file offset size is automatically detected (that is RIFF
      files < 4 GB automatically use 32 bit offsets while files >= 4 GB
      automatically use 64 bit offsets), a particular offset size can be forced
      with a new option added to the RIFF File constructor though
    - when saving a modified, grown RIFF file, the temporary file size during
      Save() operation will no longer be larger than the final grown file size

  * src/tools/akaidump.cpp, src/tools/akaiextract.cpp:
    - improved output of non-ascii characters in usage messages
    - fixed printf format strings

  * src/tools/korg2gig.cpp:
    - fixed c++11 narrowing warnings
    - fixed fine tuning which was not translated at all

  * src/tools/gigdump.cpp:
    - additionally print VelocityUpperLimit and DimensionUpperLimits of all
      dimension regions
    - additionally print RIFF chunk file offset and RIFF chunk size of sample
      data
    - added and implemented new parameter "--verify" which allows to check
      the raw wave form data integrity of all samples
    - added and implemented new parameter "--rebuild-checksums" which allows
      to recalculate the CRC32 checksum of all samples' raw wave data and
      rebuilding the gig file's global checksum table (i.e. in case the
      file's checksum table was damaged)